k8s/university-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: university-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: university-service
  template:
    metadata:
      labels:
        app: university-service
    spec:
      containers:
      - name: university-service
        image: university-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3002
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: university-service
spec:
  type: ClusterIP
  selector:
    app: university-service
  ports:
  - port: 3002
    targetPort: 3002
